feat: Add Sentiment Analysis, Embedding layer, and Topological Sort Autograd optimization